src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Agency_Bank_Info__c</fullName>
        <label>Agency ( Bank Info)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Antiss_ptico_2_litros_4_escovas_creme__c</fullName>
        <label>AntissÃ©ptico 2 litros 4 escovas creme</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antiss_ptico_500ml_1_Escova_2_creme__c</fullName>
        <label>AntissÃ©ptico 500ml 1 Escova 2 creme</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antiss_ptico_750ml_2_escovas_1_crem__c</fullName>
        <label>AntissÃ©ptico 750ml  2 escovas + 1 creme</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Athlete_First_Name__c</fullName>
        <label>Athlete First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Athlete_Last_Name__c</fullName>
        <label>Athlete Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Athlete_s_Sport_Type__c</fullName>
        <label>Athlete&apos;s Sport Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Athlete_s_Sport__c</fullName>
        <label>Athlete&apos;s Sport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Account_Name__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;Business_Contact&apos;,  Account.Name , &apos;&apos;)</formula>
        <label>Business Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF__c</fullName>
        <label>CPF</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Notes__c</fullName>
        <description>This is to make notes about any changes to the Contacts Information.</description>
        <inlineHelpText>Please make a note of any changes to the Contacts Information.</inlineHelpText>
        <label>Change Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete_Address__c</fullName>
        <description>This field is used in the Contact trigger when address is added or changed.</description>
        <formula>UPPER(
Primary_Address_Line_1__c &amp; Primary_City__c &amp; Primary_State_Province__c &amp; Primary_Postal_Code__c &amp;  Primary_Country__c
)</formula>
        <label>Complete Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Bounced__c</fullName>
        <description>Field to flag a contact to follow up with.</description>
        <formula>IF ( ISBLANK( EmailBouncedDate ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The country the contact is calling from</description>
        <inlineHelpText>Please pick the country where the contact is calling from</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Account__c</fullName>
        <label>Current Account #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_PII__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that PII for a given contact record should be deleted 21 days from when checked.</description>
        <label>Delete PII?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_update_Address_from_Server__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Do not update Addr from Server</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_have_the_invoice__c</fullName>
        <label>Do you have the invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark if customer chooses to receive email</description>
        <inlineHelpText>Please check if customer chooses to receive email</inlineHelpText>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Validation_Status__c</fullName>
        <description>Status is updated based on results from StrikeIron</description>
        <label>Email Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Timed Out</fullName>
                </value>
                <value>
                    <fullName>Analytics in Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Name__c</fullName>
        <description>The contacts Facebook name</description>
        <inlineHelpText>Please enter the contacts Facebook name</inlineHelpText>
        <label>Facebook Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <formula>IF(Account.RecordType.DeveloperName  = &quot;Business&quot;, Account.Name ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Regulatory_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Boolean field that documents if the reporter is a regulatory authority (FDA, MHRA, etc.) or not.</description>
        <inlineHelpText>A Boolean field that documents if the reporter is a regulatory authority (FDA, MHRA, etc.) or not.</inlineHelpText>
        <label>Is Regulatory Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the caller/contact</description>
        <inlineHelpText>Please select the language of the contact</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kazakh</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Pronunciation__c</fullName>
        <label>Contact Name Pronunciation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ok_to_Contact__c</fullName>
        <label>Ok to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Olympic_Receive_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Olympic_Receive_Special_box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Special box?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Olympic_Reward_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reward Accepted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Olympic_Security_Code__c</fullName>
        <label>Olympic Security Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_Line_1__c</fullName>
        <description>Details for Other Address</description>
        <inlineHelpText>Please enter details for Other Address</inlineHelpText>
        <label>Other Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_Line_2__c</fullName>
        <description>Other Address Details</description>
        <label>Other Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_Line_3__c</fullName>
        <description>Other Address Details</description>
        <label>Other Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_Override_Reason__c</fullName>
        <label>Other Address Override Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_City__c</fullName>
        <description>Details for Other Address</description>
        <label>Other City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Country__c</fullName>
        <description>This is the country for the postal address</description>
        <label>Other Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Postal_Code__c</fullName>
        <description>Other Address Details</description>
        <label>Other Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Relationship_To_Athlete__c</fullName>
        <label>Other Relationship To Athlete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Social_Media_Name__c</fullName>
        <description>Enter any other Social Media Name the Customer may have</description>
        <inlineHelpText>Please enter for any other Social Media name a customer may have</inlineHelpText>
        <label>Other Social Media Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_State_Province__c</fullName>
        <description>Other address details</description>
        <label>Other State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Other_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Other Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PII_Delete_Request_Date__c</fullName>
        <description>Date/Time PII delete was set.</description>
        <label>PII Delete Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to indicate if Customer chooses to be called</description>
        <inlineHelpText>Please check if customer is okay with calling them</inlineHelpText>
        <label>Phone Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possible_Repeater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Repeater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>This is the customers preferred method for contact</description>
        <inlineHelpText>Please select the preferred method of contact.</inlineHelpText>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                    <default>true</default>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <description>This is the preferred time the customer would like to be called.</description>
        <inlineHelpText>Please choose the customer&apos;s preferred time to be contacted.</inlineHelpText>
        <label>Preferred Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_1__c</fullName>
        <label>Primary Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_2__c</fullName>
        <label>Primary Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Line_3__c</fullName>
        <label>Primary Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Override_Reason__c</fullName>
        <label>Primary Address Override Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_City__c</fullName>
        <label>Primary City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <description>This is the Country in the Mailing address</description>
        <label>Primary Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Postal_Code__c</fullName>
        <label>Primary Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_State_Province__c</fullName>
        <label>Primary State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Other_Bank_Information__c</fullName>
        <label>Print Other Bank Information</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Role__c</fullName>
        <label>Purchasing Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_To_athlete__c</fullName>
        <label>Relationship To athlete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeater_Status__c</fullName>
        <label>Repeater Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspected Repeater</fullName>
                </value>
                <value>
                    <fullName>Known Repeater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporter_Type__c</fullName>
        <label>Reporter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Representative</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                    <default>true</default>
                    <label>Consumer</label>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>Drug Poison Info Center</fullName>
                </value>
                <value>
                    <fullName>Investigator</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Non-Health Professional</fullName>
                </value>
                <value>
                    <fullName>Nurse or Other HC Professional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Health Professional</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical Company</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>Regulatory Authority</fullName>
                </value>
                <value>
                    <fullName>Relative/Friend</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Beauty Counselor</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SearchKeyA__c</fullName>
        <label>Duplicate Check Search Key A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchKeyB__c</fullName>
        <label>Duplicate Check Search Key B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>This is to select the Shipping Address for the Contact</description>
        <inlineHelpText>Please select which address to use for shipping.</inlineHelpText>
        <label>Shipping Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Address</fullName>
                    <default>true</default>
                    <label>Primary Address</label>
                </value>
                <value>
                    <fullName>Other Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siebel_Id__c</fullName>
        <label>Siebel Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeIron_Status__c</fullName>
        <description>This field is populated with the Strike Iron Status and is not visible to anyone but the Sys Admins.</description>
        <label>StrikeIron Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talked_to__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Talked to</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Traveling_to_London__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traveling to games?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter_Name__c</fullName>
        <description>Enter the contacts Twitter handle</description>
        <inlineHelpText>Please enter the contacts twitter handle</inlineHelpText>
        <label>Twitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this checkbox will cause all related Cases to be updated in order to trigger a pull to CCM.</description>
        <inlineHelpText>Checking this checkbox will cause all related Cases to be updated in order to trigger a pull to CCM.</inlineHelpText>
        <label>Update Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER_faxAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER_faxType__c</fullName>
        <label>Fax Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER_latestFax__c</fullName>
        <label>Latest Fax</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZPAPER_newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER_outboundFaxTemplate__c</fullName>
        <label>Outbound Fax Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER_sentFaxAt__c</fullName>
        <label>Sent Fax At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZPAPER_sentFaxStatus__c</fullName>
        <label>Sent Fax Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER_sentFaxTo__c</fullName>
        <label>Sent Fax To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER_sentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>would_you_like_a_refund_or_new_product__c</fullName>
        <label>would you like a refund or new product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Repeater_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Reporter_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Japan_Business_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PII_Delete_Request_Date__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reporter_Type__c</field>
            <operation>equals</operation>
            <value>Beauty Counselor</value>
        </filters>
        <label>Japan Business Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>